--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,11 @@ plugins {
     id "org.jetbrains.kotlin.kapt" version "1.3.20"
     id "com.github.johnrengelman.shadow" version "4.0.3"
     id "flavor.pie.promptsign" version "1.0.2"
+    id "com.qixalite.spongestart2" version "4.0.0"
 }
 
 group "de.randombyte"
-version "1.1.0"
+version "1.2.0"
 
 repositories {
     jcenter()
@@ -26,6 +27,10 @@ dependencies {
     shadow("com.github.randombyte-developer.kosp:kosp:v2.2.3") { transitive = false }
     shadow "org.bstats:bstats-sponge:1.4"
     compile "com.github.NucleusPowered:Nucleus:1.9.0"
+}
+
+spongestart {
+    minecraft "1.12.2"
 }
 
 jar.enabled = false
