--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     shadow "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.20"
     kapt "org.spongepowered:spongeapi:7.4.0"
     shadow("com.github.randombyte-developer.kosp:kosp:v2.2.3") { transitive = false }
-    compile "com.github.NucleusPowered:Nucleus:1.9.0"
+    compileOnly "com.github.NucleusPowered:Nucleus:1.9.0"
 }
 
 spongestart {
